// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CulturalFlagsBanner snapshots — RTL > renders CUSTOM flag with description in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    aria-label="Cultural Preferences"
    class="flex flex-wrap items-center gap-2 rounded-lg border px-3 py-2 bg-indigo-50 dark:bg-indigo-950 border-indigo-200 dark:border-indigo-800"
    data-testid="cultural-flags-banner"
    role="status"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-indigo-50 dark:bg-indigo-950 text-indigo-700 dark:text-indigo-300"
      data-testid="cultural-flag-CUSTOM"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 shrink-0 text-indigo-500 dark:text-indigo-400"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 22 12 18.27 5.82 22 7 14.14 2 9.27l6.91-1.01L12 2z"
        />
      </svg>
      يفضل ذراع اليسار
    </span>
  </div>
</div>
`;

exports[`CulturalFlagsBanner snapshots — RTL > renders active predefined flags in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    aria-label="Cultural Preferences"
    class="flex flex-wrap items-center gap-2 rounded-lg border px-3 py-2 bg-indigo-50 dark:bg-indigo-950 border-indigo-200 dark:border-indigo-800"
    data-testid="cultural-flags-banner"
    role="status"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-indigo-50 dark:bg-indigo-950 text-indigo-700 dark:text-indigo-300"
      data-testid="cultural-flag-FEMALE_PHLEBOTOMIST"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 shrink-0 text-indigo-500 dark:text-indigo-400"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2a6 6 0 1 0 0 12 6 6 0 0 0 0-12zm0 14v4M10 18h4"
        />
      </svg>
      Prefers female phlebotomist
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-indigo-50 dark:bg-indigo-950 text-indigo-700 dark:text-indigo-300"
      data-testid="cultural-flag-PRIVACY_SCREEN"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 shrink-0 text-indigo-500 dark:text-indigo-400"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2L4 6v5c0 5.25 3.4 10.15 8 11.95C16.6 21.15 20 16.25 20 11V6l-8-4z"
        />
      </svg>
      Privacy screen recommended
    </span>
  </div>
</div>
`;

exports[`CulturalFlagsBanner snapshots — RTL > renders edit button in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    aria-label="Cultural Preferences"
    class="flex flex-wrap items-center gap-2 rounded-lg border px-3 py-2 bg-indigo-50 dark:bg-indigo-950 border-indigo-200 dark:border-indigo-800"
    data-testid="cultural-flags-banner"
    role="status"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-indigo-50 dark:bg-indigo-950 text-indigo-700 dark:text-indigo-300"
      data-testid="cultural-flag-FASTING_CARE"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 shrink-0 text-indigo-500 dark:text-indigo-400"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2c-4 5.5-7 9.17-7 12a7 7 0 0 0 14 0c0-2.83-3-6.5-7-12z"
        />
      </svg>
      Fasting patient — offer water and date after collection
    </span>
    <button
      aria-label="Edit Preferences"
      class="ms-auto inline-flex items-center gap-1 rounded px-2 py-1 text-xs font-medium text-indigo-700 dark:text-indigo-300 hover:bg-indigo-100 dark:hover:bg-indigo-900"
      data-testid="cultural-flags-edit-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil h-3.5 w-3.5"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
      Edit Preferences
    </button>
  </div>
</div>
`;

exports[`CulturalFlagsEditor snapshots — RTL > renders all predefined toggles in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4 rounded-lg border border-gray-200 bg-white p-4 dark:border-gray-700 dark:bg-gray-800"
    data-testid="cultural-flags-editor"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-base font-semibold text-gray-900 dark:text-gray-100"
      >
        Cultural Preferences
      </h3>
      <span
        class="relative inline-flex"
      >
        <button
          aria-label="These preferences help provide culturally respectful care. They are guidance for the care team, not mandates."
          class="inline-flex h-4 w-4 items-center justify-center rounded-full bg-muted text-xs text-muted-foreground hover:bg-muted focus:outline-none focus:ring-2 focus:ring-primary-300"
          type="button"
        >
          ?
        </button>
      </span>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-FEMALE_PHLEBOTOMIST"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-FEMALE_PHLEBOTOMIST"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a6 6 0 1 0 0 12 6 6 0 0 0 0-12zm0 14v4M10 18h4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-FEMALE_PHLEBOTOMIST"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers female phlebotomist
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers blood draw by a female technician
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-MALE_PHLEBOTOMIST"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-MALE_PHLEBOTOMIST"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2h6v6M22 2l-8 8M10 10a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-MALE_PHLEBOTOMIST"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers male phlebotomist
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers blood draw by a male technician
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-PRIVACY_SCREEN"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-PRIVACY_SCREEN"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2L4 6v5c0 5.25 3.4 10.15 8 11.95C16.6 21.15 20 16.25 20 11V6l-8-4z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-PRIVACY_SCREEN"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Privacy screen recommended
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Use a privacy screen during sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-FASTING_CARE"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-FASTING_CARE"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2c-4 5.5-7 9.17-7 12a7 7 0 0 0 14 0c0-2.83-3-6.5-7-12z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-FASTING_CARE"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Fasting patient — offer water and date after collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient may be fasting — offer water and a date after collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-NO_MALE_FAMILY_PRESENT"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-NO_MALE_FAMILY_PRESENT"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM18 8l4 4M22 8l-4 4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-NO_MALE_FAMILY_PRESENT"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers no male family members present during collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Male family members should not be present during female sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-NO_FEMALE_FAMILY_PRESENT"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-NO_FEMALE_FAMILY_PRESENT"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM19 8l4 4M23 8l-4 4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-NO_FEMALE_FAMILY_PRESENT"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers no female family members present during collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Female family members should not be present during male sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-MODEST_GOWN"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-MODEST_GOWN"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM7 10l-2 12h14l-2-12H7z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-MODEST_GOWN"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers modest gown
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Provide a modest gown for the patient during procedures
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-PRAYER_TIME_ACCOMMODATION"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-PRAYER_TIME_ACCOMMODATION"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 4v6l4 2z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-PRAYER_TIME_ACCOMMODATION"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prayer time accommodation
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Accommodate scheduled prayer times during longer waits
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-GENDER_SEGREGATED_WAITING"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-GENDER_SEGREGATED_WAITING"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3h7v18H3V3zm11 0h7v18h-7V3zm1.5 8h4M4.5 11h4z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-GENDER_SEGREGATED_WAITING"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers gender-segregated waiting area
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers a gender-segregated waiting area
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <input
        class="flex-1 rounded-md border border-gray-300 bg-white px-3 py-1.5 text-sm text-gray-900 placeholder:text-gray-400 dark:border-gray-600 dark:bg-gray-700 dark:text-gray-100 dark:placeholder:text-gray-500"
        data-testid="custom-flag-input"
        maxlength="200"
        placeholder="Describe custom preference..."
        type="text"
        value=""
      />
      <button
        class="rounded-md bg-indigo-100 px-3 py-1.5 text-sm font-medium text-indigo-700 hover:bg-indigo-200 disabled:opacity-50 dark:bg-indigo-900 dark:text-indigo-300 dark:hover:bg-indigo-800"
        data-testid="add-custom-flag-btn"
        disabled=""
        type="button"
      >
        Add Custom
      </button>
    </div>
    <div
      class="flex justify-end gap-2 border-t border-gray-200 pt-3 dark:border-gray-700"
    >
      <button
        class="rounded-md bg-indigo-600 px-4 py-2 text-sm font-medium text-white hover:bg-indigo-700 disabled:opacity-50 dark:bg-indigo-500 dark:hover:bg-indigo-600"
        data-testid="save-cultural-flags-btn"
        type="button"
      >
        Save Preferences
      </button>
    </div>
  </div>
</div>
`;

exports[`CulturalFlagsEditor snapshots — RTL > renders with existing prefs in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4 rounded-lg border border-gray-200 bg-white p-4 dark:border-gray-700 dark:bg-gray-800"
    data-testid="cultural-flags-editor"
  >
    <div
      class="flex items-center gap-2"
    >
      <h3
        class="text-base font-semibold text-gray-900 dark:text-gray-100"
      >
        Cultural Preferences
      </h3>
      <span
        class="relative inline-flex"
      >
        <button
          aria-label="These preferences help provide culturally respectful care. They are guidance for the care team, not mandates."
          class="inline-flex h-4 w-4 items-center justify-center rounded-full bg-muted text-xs text-muted-foreground hover:bg-muted focus:outline-none focus:ring-2 focus:ring-primary-300"
          type="button"
        >
          ?
        </button>
      </span>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-FEMALE_PHLEBOTOMIST"
      >
        <button
          aria-checked="true"
          aria-labelledby="cultural-flag-label-FEMALE_PHLEBOTOMIST"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-indigo-500"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-4 rtl:-translate-x-4"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a6 6 0 1 0 0 12 6 6 0 0 0 0-12zm0 14v4M10 18h4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-FEMALE_PHLEBOTOMIST"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers female phlebotomist
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers blood draw by a female technician
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-MALE_PHLEBOTOMIST"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-MALE_PHLEBOTOMIST"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2h6v6M22 2l-8 8M10 10a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-MALE_PHLEBOTOMIST"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers male phlebotomist
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers blood draw by a male technician
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-PRIVACY_SCREEN"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-PRIVACY_SCREEN"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2L4 6v5c0 5.25 3.4 10.15 8 11.95C16.6 21.15 20 16.25 20 11V6l-8-4z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-PRIVACY_SCREEN"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Privacy screen recommended
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Use a privacy screen during sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-FASTING_CARE"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-FASTING_CARE"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2c-4 5.5-7 9.17-7 12a7 7 0 0 0 14 0c0-2.83-3-6.5-7-12z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-FASTING_CARE"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Fasting patient — offer water and date after collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient may be fasting — offer water and a date after collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-NO_MALE_FAMILY_PRESENT"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-NO_MALE_FAMILY_PRESENT"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM18 8l4 4M22 8l-4 4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-NO_MALE_FAMILY_PRESENT"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers no male family members present during collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Male family members should not be present during female sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-NO_FEMALE_FAMILY_PRESENT"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-NO_FEMALE_FAMILY_PRESENT"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM19 8l4 4M23 8l-4 4"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-NO_FEMALE_FAMILY_PRESENT"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers no female family members present during collection
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Female family members should not be present during male sample collection
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-MODEST_GOWN"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-MODEST_GOWN"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM7 10l-2 12h14l-2-12H7z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-MODEST_GOWN"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers modest gown
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Provide a modest gown for the patient during procedures
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-PRAYER_TIME_ACCOMMODATION"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-PRAYER_TIME_ACCOMMODATION"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 4v6l4 2z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-PRAYER_TIME_ACCOMMODATION"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prayer time accommodation
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Accommodate scheduled prayer times during longer waits
          </p>
        </div>
      </div>
      <div
        class="flex cursor-pointer items-center gap-3 rounded-md px-2 py-2 hover:bg-gray-50 dark:hover:bg-gray-700"
        data-testid="cultural-flag-toggle-GENDER_SEGREGATED_WAITING"
      >
        <button
          aria-checked="false"
          aria-labelledby="cultural-flag-label-GENDER_SEGREGATED_WAITING"
          class="relative inline-flex h-5 w-9 shrink-0 items-center rounded-full transition-colors bg-gray-300 dark:bg-gray-600"
          role="switch"
          type="button"
        >
          <span
            class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-0.5 rtl:-translate-x-0.5"
          />
        </button>
        <svg
          aria-hidden="true"
          class="h-5 w-5 shrink-0 text-indigo-500 dark:text-indigo-400"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3h7v18H3V3zm11 0h7v18h-7V3zm1.5 8h4M4.5 11h4z"
          />
        </svg>
        <div
          class="min-w-0 flex-1"
          id="cultural-flag-label-GENDER_SEGREGATED_WAITING"
        >
          <p
            class="text-sm font-medium text-gray-900 dark:text-gray-100"
          >
            Prefers gender-segregated waiting area
          </p>
          <p
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Patient prefers a gender-segregated waiting area
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <input
        class="flex-1 rounded-md border border-gray-300 bg-white px-3 py-1.5 text-sm text-gray-900 placeholder:text-gray-400 dark:border-gray-600 dark:bg-gray-700 dark:text-gray-100 dark:placeholder:text-gray-500"
        data-testid="custom-flag-input"
        maxlength="200"
        placeholder="Describe custom preference..."
        type="text"
        value=""
      />
      <button
        class="rounded-md bg-indigo-100 px-3 py-1.5 text-sm font-medium text-indigo-700 hover:bg-indigo-200 disabled:opacity-50 dark:bg-indigo-900 dark:text-indigo-300 dark:hover:bg-indigo-800"
        data-testid="add-custom-flag-btn"
        disabled=""
        type="button"
      >
        Add Custom
      </button>
    </div>
    <div
      class="flex justify-end gap-2 border-t border-gray-200 pt-3 dark:border-gray-700"
    >
      <button
        class="rounded-md bg-indigo-600 px-4 py-2 text-sm font-medium text-white hover:bg-indigo-700 disabled:opacity-50 dark:bg-indigo-500 dark:hover:bg-indigo-600"
        data-testid="save-cultural-flags-btn"
        type="button"
      >
        Save Preferences
      </button>
    </div>
  </div>
</div>
`;
